--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+<nz-layout style="height: 100%;">
+    <nz-header>
+      <div class="logo"></div>
+    </nz-header>
+    <nz-content style="margin: 25px; height: 100%;" >
+        <router-outlet></router-outlet>
+    </nz-content>
+    <nz-footer>Decenscript</nz-footer>
+  </nz-layout>
