--- a/src/app/pages/instructor/instructor.component.html
+++ b/src/app/pages/instructor/instructor.component.html
@@ -1,6 +1,9 @@
+<div>
+  <a routerLink="/create-class" nz-button nzType="primary" >Create new class</a>
+</div>
 <nz-tabset style="height: 100%">
   <nz-tab nzTitle="Fall 2022">
-    <nz-table 
+    <nz-table
         [nzScroll] = "{y :'1000px'}">
       <thead>
         <tr>
