--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -1,14 +1,14 @@
-<nz-tabset style="height: 100%">
+<nz-tabset style="height: 100%; overflow: auto">
     <nz-tab nzTitle="Student">
         <div style="background: #ECECEC;padding:30px;">
             <nz-card style="width: 100%;" [nzBordered]="false" nzTitle="New Student" [ngStyle]="{width: '100%', textAlign: 'center'}">
         <p>Student Name :
             <input nz-input placeholder="Enter Class Name" [(ngModel)]="studentName" /> Address:
             <input nz-input placeholder="Enter Class Name" [(ngModel)]="studentAddr" />
-            <button nz-button nzType="primary">Create</button></p>
+            <p></p>
+            <button nz-button nzType="primary">Create</button>
     </nz-card>
     </div>
-        <p></p>
           <nz-table>
               <thead>
                 <tr>
