--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<nz-layout style="height: 100%;">
-    <nz-header>
-      <div class="logo"></div>
-      <div id="logOutButton"><button nz-button nzType="primary" >Log Out</button></div>
-    </nz-header>
-    <nz-content style="margin: 25px; height: 100%;" >
-        <router-outlet></router-outlet>
-    </nz-content>
-    <nz-footer>Decenscript</nz-footer>
-  </nz-layout>
+<nz-layout style="height: 100%">
+  <nz-header>
+    <div class="logo"></div>
+    <div id="logOutButton">
+      <button nz-button nzType="primary">Log Out</button>
+    </div>
+  </nz-header>
+  <nz-content style="margin: 25px; height: 100%">
+    <router-outlet></router-outlet>
+  </nz-content>
+  <nz-footer>Decenscript</nz-footer>
+</nz-layout>
