--- a/src/app/pages/student/student.component.html
+++ b/src/app/pages/student/student.component.html
@@ -1,31 +1,32 @@
 <nz-tabset>
-    <nz-tab nzTitle="Fall 2022">
-        <nz-table>
-            <thead>
-              <tr>
-                <th>Class Name</th>
-                <th>Grade</th>
-                <th>BlockID</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-        </nz-table>
-    </nz-tab>
-    <nz-tab nzTitle="Spring 2023"><nz-table>
-        <thead>
-          <tr>
-            <th>Class Name</th>
-            <th>Grade</th>
-            <th>BlockID</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>CMPSC311</td>
-                <td>A</td>
-                <td>JJSURNS56</td>
-            </tr>
-        </tbody>
+  <nz-tab nzTitle="Fall 2022">
+    <nz-table>
+      <thead>
+        <tr>
+          <th>Class Name</th>
+          <th>Grade</th>
+          <th>BlockID</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
     </nz-table>
-</nz-tab>
-  </nz-tabset>
+  </nz-tab>
+  <nz-tab nzTitle="Spring 2023"
+    ><nz-table>
+      <thead>
+        <tr>
+          <th>Class Name</th>
+          <th>Grade</th>
+          <th>BlockID</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>CMPSC311</td>
+          <td>A</td>
+          <td>JJSURNS56</td>
+        </tr>
+      </tbody>
+    </nz-table>
+  </nz-tab>
+</nz-tabset>
