--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
     <div id="logOutButton">
       <button nz-button nzType="primary">Log Out</button>
     </div>
+    <div id="logoImage">
+      <img src="Decenscript Logo.png">
+    </div>
   </nz-header>
   <nz-content style="margin: 25px; height: 100%">
     <router-outlet></router-outlet>
