--- a/src/app/pages/instructor/instructor.component.html
+++ b/src/app/pages/instructor/instructor.component.html
@@ -1,75 +1,77 @@
 <div>
-  <a routerLink="/create-class" nz-button nzType="primary" >Create new class</a>
+  <a routerLink="/create-class" nz-button nzType="primary">Create new class</a>
 </div>
 <nz-tabset style="height: 100%">
   <nz-tab nzTitle="Fall 2022">
     <nz-tabset>
-        <nz-tab nzTitle = "CMPSC311">
-    <nz-table
-        [nzScroll] = "{y :'1000px'}">
-      <thead>
-        <tr>
-          <th>Student Name</th>
-          <th>Class Name</th>
-          <th>Grade</th>
-          <th>Signiture</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Joe Su</td>
-          <td>CMPSC 311</td>
-          <td><nz-select ngModel="Grades">
-            <nz-option nzValue="A" nzLabel="A"></nz-option>
-            <nz-option nzValue="A-" nzLabel="A-"></nz-option>
-            <nz-option nzValue="B+" nzLabel="B+"></nz-option>
-            <nz-option nzValue="B" nzLabel="B"></nz-option>
-            <nz-option nzValue="B-" nzLabel="B-"></nz-option>
-            <nz-option nzValue="C+" nzLabel="C+"></nz-option>
-            <nz-option nzValue="C" nzLabel="C"></nz-option>
-            <nz-option nzValue="D" nzLabel="D"></nz-option>
-            <nz-option nzValue="F" nzLabel="F"></nz-option>
-        </nz-select></td>
-          <td><button nz-button nzType="primary" nzBlock>Sign</button></td>
-        </tr>
-      </tbody>
-    </nz-table>
-</nz-tab>
-</nz-tabset>
+      <nz-tab nzTitle="CMPSC311">
+        <nz-table [nzScroll]="{ y: '1000px' }">
+          <thead>
+            <tr>
+              <th>Student Name</th>
+              <th>Class Name</th>
+              <th>Grade</th>
+              <th>Signiture</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Joe Su</td>
+              <td>CMPSC 311</td>
+              <td>
+                <nz-select nzAllowClear ngModel="Grades" nzPlaceHolder="Select Letter Grade">
+                  <nz-option nzValue="A" nzLabel="A"></nz-option>
+                  <nz-option nzValue="A-" nzLabel="A-"></nz-option>
+                  <nz-option nzValue="B+" nzLabel="B+"></nz-option>
+                  <nz-option nzValue="B" nzLabel="B"></nz-option>
+                  <nz-option nzValue="B-" nzLabel="B-"></nz-option>
+                  <nz-option nzValue="C+" nzLabel="C+"></nz-option>
+                  <nz-option nzValue="C" nzLabel="C"></nz-option>
+                  <nz-option nzValue="D" nzLabel="D"></nz-option>
+                  <nz-option nzValue="F" nzLabel="F"></nz-option>
+                </nz-select>
+              </td>
+              <td><button nz-button nzType="primary" nzBlock>Sign</button></td>
+            </tr>
+          </tbody>
+        </nz-table>
+      </nz-tab>
+    </nz-tabset>
   </nz-tab>
-  <nz-tab nzTitle="Spring 2023"
-    >
+  <nz-tab nzTitle="Spring 2023">
     <nz-tabset>
-        <nz-tab nzTitle = "CMPSC311">
-            <nz-table>
-      <thead>
-        <tr>
-          <th>Student Name</th>
-          <th>Class Name</th>
-          <th>Grade</th>
-          <th>Signiture</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Joe Su</td>
-          <td>CMPSC 311</td>
-          <td><nz-select ngModel="Grades">
-            <nz-option nzValue="A" nzLabel="A"></nz-option>
-            <nz-option nzValue="A-" nzLabel="A-"></nz-option>
-            <nz-option nzValue="B+" nzLabel="B+"></nz-option>
-            <nz-option nzValue="B" nzLabel="B"></nz-option>
-            <nz-option nzValue="B-" nzLabel="B-"></nz-option>
-            <nz-option nzValue="C+" nzLabel="C+"></nz-option>
-            <nz-option nzValue="C" nzLabel="C"></nz-option>
-            <nz-option nzValue="D" nzLabel="D"></nz-option>
-            <nz-option nzValue="F" nzLabel="F"></nz-option>
-        </nz-select></td>
-          <td><button nz-button nzType="primary" nzBlock>Sign</button></td>
-        </tr>
-      </tbody>
-    </nz-table>
-</nz-tab>
-</nz-tabset>
-    </nz-tab>
+      <nz-tab nzTitle="CMPSC311">
+        <nz-table [nzScroll]="{ y: '1000px' }">
+          <thead>
+            <tr>
+              <th>Student Name</th>
+              <th>Class Name</th>
+              <th>Grade</th>
+              <th>Signiture</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Joe Su</td>
+              <td>CMPSC 311</td>
+              <td>
+                <nz-select nzAllowClear ngModel="Grades" nzPlaceHolder="Select Letter Grade">
+                  <nz-option nzValue="A" nzLabel="A"></nz-option>
+                  <nz-option nzValue="A-" nzLabel="A-"></nz-option>
+                  <nz-option nzValue="B+" nzLabel="B+"></nz-option>
+                  <nz-option nzValue="B" nzLabel="B"></nz-option>
+                  <nz-option nzValue="B-" nzLabel="B-"></nz-option>
+                  <nz-option nzValue="C+" nzLabel="C+"></nz-option>
+                  <nz-option nzValue="C" nzLabel="C"></nz-option>
+                  <nz-option nzValue="D" nzLabel="D"></nz-option>
+                  <nz-option nzValue="F" nzLabel="F"></nz-option>
+                </nz-select>
+              </td>
+              <td><button nz-button nzType="primary" nzBlock>Sign</button></td>
+            </tr>
+          </tbody>
+        </nz-table>
+      </nz-tab>
+    </nz-tabset>
+  </nz-tab>
 </nz-tabset>
