--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,9 @@
       <button nz-button nzType="primary">Log Out</button>
     </div>
     <div id="logoImage">
-      <img src="Decenscript Logo.png">
+      <img src="/assets/decenscript.png">
     </div>
+    <p id="decenscript">Decenscript</p>
   </nz-header>
   <nz-content style="margin: 25px; height: 100%">
     <router-outlet></router-outlet>
