--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,3 +12,9 @@
     font-size:40px;
     color:antiquewhite;
 }
+
+nz-footer{
+    text-align: center;
+    font-size:30px;
+    color:darkslateblue;
+}
