--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nz-layout style="height: 100%;">
     <nz-header>
       <div class="logo"></div>
-      <div id="logOutButton"><button nz-button nzType="primary" >Log Out</button></div>
+<!--      <div id="logOutButton"><button nz-button nzType="primary" (click)="disconnect()" >Log Out</button></div>-->
     </nz-header>
     <nz-content style="margin: 25px; height: 100%;" >
         <router-outlet></router-outlet>
