--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -1,3 +1,10 @@
-<div>
-  <button nz-button nzType="primary">Auth with Web3</button>
+<div class="text-center">
+  <h2>Welcome to Decenscript.</h2>
+  <p>Decenscript is a decentralized platform for keeping an always trusted transcript for academic
+    institutions using ERC1155 standard (aka. NFT). Each course's grade is minted into an NFT signed with the
+  instructors electronics signature and pack an digital signature in the event of attempted attack.</p>
+  <p>To start, install Metamask and use <span style="color: lightpink">Polygon Testnet</span> network. </p>
+  <button nz-button nzType="primary" (click)="ethEnabled()">Login with Metamask</button>
 </div>
+
+
