--- a/src/app/pages/create-class/create-class.component.html
+++ b/src/app/pages/create-class/create-class.component.html
@@ -2,7 +2,6 @@
 <input nz-input placeholder="Enter Class Name" [(ngModel)]="className" /></p>
 <p>Semester :
     <nz-select nzAllowClear nzPlaceHolder="Select A Semester" [(ngModel)]="semesterName">
-        <nz-option nzValue="FA22" nzLabel="Fall 2022"></nz-option>
-        <nz-option nzValue="SP22" nzLabel="Spring 2022"></nz-option>
+        <nz-option *ngFor="let sem of SEMESTERS" nzValue="{{sem.value}}" nzLabel="{{sem.name}}"></nz-option>
     </nz-select></p>
 <button nz-button nzType="primary" nzBlock (click)="handleCreate()">Create</button>
