--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,14 @@
   <nz-header>
     <div class="logo"></div>
     <div id="logOutButton">
-      <button nz-button nzType="primary">Log Out</button>
+      <button nz-button nzType="primary" (click)="disconnect()">Log Out</button>
     </div>
     <div id="logoImage">
-      <img src="/assets/decenscript.png">
+      <img src="/assets/decenscript.png" alt="logo">
     </div>
     <p id="decenscript">Decenscript</p>
   </nz-header>
-  <nz-content style="margin: 25px; height: 100%">
+  <nz-content style="margin: 20px; height: 100%">
     <router-outlet></router-outlet>
   </nz-content>
   <nz-footer>Decenscript</nz-footer>
