--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <nz-header>
     <div class="logo"></div>
     <div id="logOutButton">
-      <button nz-button nzType="primary" (click)="disconnect()">Log Out</button>
+      <a nz-button nzType="primary" routerLink="/verify" >Verify Token</a>
     </div>
     <div id="logoImage">
       <img src="/assets/decenscript.png" alt="logo">
