--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -3,7 +3,7 @@
   <p>Decenscript is a decentralized platform for keeping an always trusted transcript for academic
     institutions using ERC1155 standard (aka. NFT). Each course's grade is minted into an NFT signed with the
   instructors electronics signature and pack an digital signature in the event of attempted attack.</p>
-  <p>To start, install Metamask and use <span style="color: lightpink">Polygon Testnet</span>(Chain ID:80001) network. </p>
+  <p>To start, install Metamask and use <span style="color: lightpink">Polygon Testnet</span>(Chain ID:80001) network. Please add the network <a href="https://mumbai.polygonscan.com/">here</a> </p>
   <button nz-button nzType="primary" (click)="checkUser()">Login with Metamask</button>
   <nz-modal [(nzVisible)]="isVisible" nzTitle="MetaMask Missing" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
     <ng-container *nzModalContent>
