--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -42,6 +42,7 @@
             <nz-button-group>
               <button nz-button nzType="primary">Lock</button>
               <button nz-button>Export</button>
+              <button  nz-button nzType="primary" nzDanger>Promote</button>
             </nz-button-group>
           </td>
         </tr>
@@ -90,6 +91,7 @@
           <nz-button-group>
             <button nz-button nzType="primary">Lock</button>
             <button nz-button>Export</button>
+            <button nz-button nzType="primary" nzDanger>Demote</button>
           </nz-button-group>
         </td>
       </tr>
